<resources>
    <string name="app_name">StreamingYorkie</string>
    <string name="error_symbol">Error Symbol</string>
    <string name="authorization_failed">Authorization Failed!</string>
    <string name="error_message">This can be caused by one of the following: user denying access, no internet, wrong user and/or password, undiscovered bug / feature impediment</string>
    <string name="user_logo">User Logo</string>
    <string name="username">UserName</string>
    <string name="refresh_symbol">Refresh Symbol</string>
    <string name="category">Category</string>
    <string name="count">0</string>
    <string name="emptyuserrow">Nothing to show!</string>
    <string name="emptyuserrow_symbol">Empty user row Symbol</string>
    <string name="logout_symbol">Logout Symbol</string>
    <string name="empty_logs">Logs are empty</string>
    <string name="off">Off</string>
    <string name="export">Export</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="follow_unfollow">Follow &amp; Unfollow></string>
    <string name="auto_follow_service">AutoFollow Service</string>
    <string name="auto_vod_export_service">AutoVODExport Service</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="visibility">Visibility</string>
    <string name="visibility_private">Private</string>
    <string name="visibility_public">Public</string>
    <string name="split">Split</string>
    <string name="interval">Interval</string>
    <string name="interval_amount">1</string>
    <string name="interval_minutes">Minute(s)</string>
    <string name="interval_hours">Hour(s)</string>
    <string name="interval_days">Day(s)</string>
    <string name="interval_weeks">Weeks(s)</string>
    <string name="settings_share_f4f_status">Share F4F status to Discord</string>
    <string name="save_symbol">Save Symbol</string>
    <string name="blank_text">_____</string>
    <string name="description">Description:</string>
    <string name="game">Game:</string>
    <string name="member_since">Member Since:</string>
    <string name="status">Status:</string>
    <string name="followers">Followers:</string>
    <string name="views">Views</string>
    <string name="id">ID:</string>
    <string name="broadcaster_type">Broadcaster Type:</string>
    <string name="action_button_3">Action Button 3</string>
    <string name="action_button_2">Action Button 2</string>
    <string name="action_button_1">Action Button 1</string>
    <string name="logout">Logout</string>
    <string name="info">Info</string>
    <string name="cast">Cast</string>
    <string name="settings">Settings</string>
    <string name="actionAll">Follow/Unfollow All</string>
    <string name="vod_preview">VOD Preview</string>
    <string name="created_at">Created at</string>
    <string name="duration">Duration</string>
    <string name="title">Title:</string>
    <string name="tags">Tags:</string>
    <string name="publish">Publish</string>
    <string name="do_split">Split</string>
    <string name="enter_title">Enter a title&#8230;</string>
    <string name="enter_description">Enter a description&#8230;</string>
    <string name="enter_tags">Enter tags&#8230;</string>
    <string name="vod_action_button">VOD Action Button</string>
    <string name="menu_followers">Followers Menu</string>
    <string name="menu_following">Following Menu</string>
    <string name="menu_f4f">F4F Menu</string>
    <string name="menu_vods">VODs Menu</string>
    <string name="menu_multi">Multi Menu</string>
    <string name="menu_lurk">Lurk</string>
    <string name="menu_userinfo">UserInfo Menu</string>
    <string name="menu_info">Info Menu</string>
    <string name="menu_host">Host Menu</string>
    <string name="menu_shop">Shop Menu</string>
    <string name="menu_settings">Settings Menu</string>
    <string name="menu_dashboard">Dashboard Menu</string>
    <string name="info_twitch">Twitch</string>
    <string name="info_shoutout">Shout-outs</string>
    <string name="info_readme">Guide</string>
    <string name="info_contact">Contact</string>
    <string name="info_discord">Discord</string>
    <string name="info_patreon">Patreon</string>
    <string name="info_developer">Developer</string>
    <string name="info_github">Projects</string>
    <string name="info_help">Help</string>
    <string name="info_updates">Updates</string>
    <string name="info_source_code">Source Code</string>
    <string name="guide_menu_title">Menu Icons</string>
    <string name="guide_menu_description">Several menus are available to divide StreamingYorkie into each feature it offers:</string>
    <string name="guide_menu_followers">Shows all <b>Followers</b> from Twitch including who has unfollowed</string>
    <string name="guide_menu_following">Shows all <b>Following</b> from Twitch including who you have unfollowed</string>
    <string name="guide_menu_f4f">Overview &amp; simplification users who <b>F4F (Follow for Follow)</b></string>
    <string name="guide_menu_vods">Overview for VODs (Videos On Demand) &amp; exporting VODs</string>
    <string name="guide_menu_multi">Watch multiple streams at once on one screen</string>
    <string name="guide_menu_lurk">Lurk streamers and add to their view count</string>
    <string name="guide_menu_shop">Lists purchasable subscriptions/in-app items</string>
    <string name="guide_menu_userinfo">Quick overview about your Twitch account</string>
    <string name="guide_menu_info">Shows different platforms for further information such as a <b>Twitch</b> &amp; <b>Contact</b></string>
    <string name="guide_menu_github_readme">Github link to ReadMe guide</string>
    <string name="guide_menu_help">Offline help guide</string>
    <string name="guide_menu_updates">Github link to Updates</string>
    <string name="guide_menu_sourcecode">Github link to the source code</string>
    <string name="guide_menu_contact">Github link to Contact</string>
    <string name="guide_menu_discord">Link to Discord</string>
    <string name="guide_menu_twitch">Link to developers stream</string>
    <string name="guide_menu_patreon">Membership</string>
    <string name="guide_menu_github">Projects</string>
    <string name="guide_menu_settings">The settings menu is split up into further features below</string>
    <string name="guide_menu_autofollow">Settings for activating &amp; configuring the AutoFollow Worker</string>
    <string name="guide_menu_autovodexport">Settings for activating &amp; configuring the AutoVODExport Worker</string>
    <string name="guide_menu_autolurk">Settings for activating &amp; configuring the AutoLurk Worker</string>
    <string name="guide_menu_authorization">Logs out of StreamingYorkie &amp; Twitch as well as deleting any data relating to your Twitch account</string>
    <string name="guide_categories_title">Category Icons</string>
    <string name="guide_categories_description">Each Menu is split into 3&#8211;4 of the following categories:</string>
    <string name="guide_categories_new">All new Followers/Following</string>
    <string name="guide_categories_follow">All current Followers/Following (including New)</string>
    <string name="guide_categories_unfollow">All Followers who unfollowed you or Following you unfollowed</string>
    <string name="guide_categories_excluded">Users/VODs that are excluded from AutoFollow/AutoExport as well as being excluded from the other menus</string>
    <string name="guide_categories_notfollowing_followers">Users who Follow you, but you dont Follow them back</string>
    <string name="guide_categories_follow4follow">Followers who also Follow you</string>
    <string name="guide_categories_following_nonfollowers">Users you Follow, who dont Follow you back</string>
    <string name="guide_categories_vods">VODs (Videos On Demand) that are available on your Twitch account</string>
    <string name="guide_categories_export">Exported VODs done by StreamingYorkie will be found here</string>
    <string name="guide_actions_title">Action Icons</string>
    <string name="guide_actions_description">Each category contains up to 3 of the following actions:</string>
    <string name="guide_actions_follow">Follows the chosen User</string>
    <string name="guide_actions_unfollow">Unfollows the chosen User</string>
    <string name="guide_actions_notifications">Activates notifications received from the User</string>
    <string name="guide_actions_notifications_deactivate">Deactivates notifications received from the User</string>
    <string name="guide_actions_exclude">Excludes Users/VODs from other categories &amp; from AutoFollow</string>
    <string name="guide_actions_include">Includes Users/VODs from other categories &amp; from AutoFollow</string>
    <string name="guide_actions_delete">Deletes User/VOD from the Device (not Twitch)</string>
    <string name="guide_actions_export">Exports a VOD from Twitch to Youtube</string>
    <string name="guide_actions_multi">Start watching multiple streams at once on one screen</string>
    <string name="guide_actions_lurk">Initiate lurking given streamer</string>
    <string name="guide_actions_unlurk">Stop lurking chosen streamer</string>
    <string name="guide_actions_message">Opens a dialog to send a message to the chosen channels chat</string>
    <string name="guide_actions_send">Sends the message to channel chat</string>
    <string name="guide_actions_buy">Purchases the selected subscription/in-app item</string>
    <string name="guide_actions_cancel">Cancels the current action being taken</string>
    <string name="guide_actions_refresh">Refreshes the current view (if internet is available)</string>
    <string name="guide_actions_authorization">Logs out of StreamingYorkie &amp; Twitch as well as deleting all device data</string>
    <string name="guide_actions_save">Saves the current changes (if any have been made)</string>
    <string name="multi_channel">Channel:</string>
    <string name="multi_channel_enter">Enter a Twitch channel name&#8230;</string>
    <string name="multi_start">Start Multi Twitch</string>
    <string name="lurk_start">Start Lurk</string>
    <string name="lurk_input">Enter a Twitch channel name&#8230;</string>
    <string name="lurk_dialog_title">Send a message</string>
    <string name="lurk_dialog_message_title">Message:</string>
    <string name="lurk_dialog_message_hint">Enter a message</string>
    <string name="lurk_dialog_send">Send</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="settings_integrity">Settings structure has changed, please update</string>
    <string name="settings_autolurk_activate">Activate AutoLurk</string>
    <string name="settings_autolurk_inform_channel">Inform channel of lurk</string>
    <string name="settings_autolurk_wifi_only">Lurk on WiFi only</string>
    <string name="settings_autolurk_audio_only">Audio only</string>
    <string name="settings_autolurk_audio_only_info">Audio only sometimes does not count as a view however deactivating it increases bandwidth usage.</string>
    <string name="settings_lurk_share_status">Share Lurk status to Discord</string>
    <string name="shop_button">Purchase</string>
    <string name="supporter_title">Official Supporter!</string>
    <string name="supporter">Thank you for supporting Streaming Yorkie! Be sure to get on our discord for your free gifts!</string>
    <string name="login_error_title">An error has occurred.</string>
    <string name="login_error_message">The server failed to communicate. Try again later</string>

</resources>
