<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/settings_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="163dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="32dp"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="16dp">

                <TextView
                    android:id="@+id/settings_autoFollow_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/auto_follow_service"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/settings_autoFollow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/settings_autoFollow_off"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="@string/off" />

                    <RadioButton
                        android:id="@+id/settings_autoFollow_follow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="@string/follow" />

                    <RadioButton
                        android:id="@+id/settings_autoFollow_unfollow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/unfollow" />

                    <RadioButton
                        android:id="@+id/settings_autoFollow_followUnfollow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/follow_unfollow" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_weight="1"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/settings_autoFollowInterval_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/interval"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <SeekBar
                    android:id="@+id/settings_autoFollowInterval_value"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="59"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:progress="0" />

                <TextView
                    android:id="@+id/settings_autoFollowInterval_value_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/interval_amount"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <RadioGroup
                    android:id="@+id/settings_autoFollowIntervalUnit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/settings_autoFollowIntervalUnit_minutes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/interval_minutes" />

                    <RadioButton
                        android:id="@+id/settings_autoFollowIntervalUnit_hours"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/interval_hours" />

                    <RadioButton
                        android:id="@+id/settings_autoFollowIntervalUnit_days"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/interval_days" />
                </RadioGroup>
            </LinearLayout>

            <Switch
                android:id="@+id/settings_autoFollowNotifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_weight="1"
                android:text="@string/enable_notifications"
                android:textSize="16sp" />

            <Switch
                android:id="@+id/settings_autoFollow_share_f4f_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_weight="1"
                android:text="@string/settings_share_f4f_status"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/settings_save"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/save_symbol"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/save" />

</android.support.constraint.ConstraintLayout>