<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp">

    <TextView
        android:id="@+id/vod_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/title"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/vod_preview"
        android:layout_width="180dp"
        android:layout_height="101dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/vod_preview"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vod_title"
        app:srcCompat="@drawable/vod_menu" />

    <TextView
        android:id="@+id/vod_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/game"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/vod_preview"
        app:layout_constraintTop_toBottomOf="@+id/vod_title" />

    <TextView
        android:id="@+id/vod_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/duration"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintStart_toEndOf="@+id/vod_preview" />

    <TextView
        android:id="@+id/vod_createdAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/created_at"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/vod_duration"
        app:layout_constraintStart_toEndOf="@+id/vod_preview" />

    <ImageButton
        android:id="@+id/vod_action_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/vod_action_button"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/export" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vod_preview" />

</android.support.constraint.ConstraintLayout>