<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/settings_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <Switch
                android:id="@+id/settings_autolurk_activation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_weight="1"
                android:text="@string/settings_autolurk_activate"
                android:textSize="16sp" />

            <Switch
                android:id="@+id/settings_autolurk_audio_only"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_weight="1"
                android:text="@string/settings_autolurk_audio_only"
                android:textSize="16sp" />

            <Switch
                android:id="@+id/settings_autolurk_wifi_only"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_weight="1"
                android:text="@string/settings_autolurk_wifi_only"
                android:textSize="16sp" />

            <Switch
                android:id="@+id/settings_autolurk_inform"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_weight="1"
                android:text="@string/settings_autolurk_inform_channel"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/settings_autolurk_message_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lurk_dialog_message_title"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/settings_autolurk_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/lurk_dialog_message_hint"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_autolurk_message_title" />

        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/settings_save"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/save_symbol"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/save" />

</androidx.constraintlayout.widget.ConstraintLayout>

